// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.changeProposalDecision should change the related assessment state when the decision is taken. 1`] = `
Object {
  "changeProposalDecision": Object {
    "decision": Object {
      "isApproved": true,
      "proposal": Object {
        "assessment": Object {
          "state": "TOO_LATE",
        },
      },
      "state": "DONE",
    },
    "errorCode": null,
  },
}
`;

exports[`mutations.changeProposalDecision should create a new empty proposal decision on the proposal. 1`] = `
Object {
  "changeProposalDecision": Object {
    "decision": Object {
      "estimatedCost": 0,
      "isApproved": true,
      "post": Object {
        "authors": Array [],
        "translations": Array [
          Object {
            "body": "",
            "title": "proposal_decision.official_response",
          },
        ],
      },
      "refusedReason": null,
      "state": "IN_PROGRESS",
    },
    "errorCode": null,
    "proposal": Object {
      "id": "UHJvcG9zYWw6cHJvcG9zYWwxMTI=",
      "news": Object {
        "edges": Array [],
        "totalCount": 0,
      },
    },
  },
}
`;

exports[`mutations.changeProposalDecision should create a pre-filled decision if an assessment already exist on the proposal. 1`] = `
Object {
  "changeProposalDecision": Object {
    "decision": null,
    "errorCode": "REFUSED_REASON_EMPTY",
    "proposal": null,
  },
}
`;

exports[`mutations.changeProposalDecision should modify the proposal decision. 1`] = `
Object {
  "changeProposalDecision": Object {
    "decision": Object {
      "estimatedCost": 50000,
      "isApproved": true,
      "post": Object {
        "authors": Array [
          Object {
            "id": "VXNlcjp1c2VyRGVjaXNpb25NYWtlcg==",
          },
          Object {
            "id": "VXNlcjp1c2VyU3VwZXJ2aXNvcjI=",
          },
        ],
        "translations": Array [
          Object {
            "body": "Je suis le body de l'article lié à la proposition sur laquelle je donne ma décision",
            "title": "proposal_decision.official_response",
          },
        ],
      },
      "refusedReason": null,
      "state": "DONE",
    },
    "errorCode": null,
    "proposal": Object {
      "id": "UHJvcG9zYWw6cHJvcG9zYWwxMTI=",
      "news": Object {
        "edges": Array [
          Object {
            "node": Object {
              "abstract": "Je suis le body de l'article lié à la proposition sur laquelle je donne ma décision",
              "authors": Array [
                Object {
                  "displayName": "decisionmaker",
                  "id": "VXNlcjp1c2VyRGVjaXNpb25NYWtlcg==",
                  "url": "https://capco.test/profile/decisionmaker",
                  "vip": false,
                },
                Object {
                  "displayName": "supervisor2",
                  "id": "VXNlcjp1c2VyU3VwZXJ2aXNvcjI=",
                  "url": "https://capco.test/profile/supervisor2",
                  "vip": false,
                },
              ],
              "media": null,
              "themes": Array [],
              "title": "proposal_decision.official_response",
              "url": "https://capco.test/blog/proposal-decision-official-response",
            },
          },
        ],
        "totalCount": 1,
      },
    },
  },
}
`;

exports[`mutations.changeProposalDecision should not modify the proposal decision if the refused reason is empty. 1`] = `
Object {
  "changeProposalDecision": Object {
    "decision": null,
    "errorCode": "REFUSED_REASON_EMPTY",
    "proposal": null,
  },
}
`;
